--- a/blogauth/templates/blogauth/register.html
+++ b/blogauth/templates/blogauth/register.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 {% block content %}
-  <form action="{% url 'user_register' %}" method="post">
+  <form action="{% url 'accounts:user-register' %}" method="post">
       {% csrf_token %}
       {{ form.non_field_errors }}
       <div class="register_field">
