--- a/blogauth/templates/blogauth/blogprofile_list.html
+++ b/blogauth/templates/blogauth/blogprofile_list.html
@@ -1,11 +1,11 @@
 {% extends "base_generic.html" %}
 {% block content %}
-  {% for user in object_list %}
+  {% for profile in object_list %}
     <div>
-      <a href="{% url 'accounts:user-detail' user.id %}"><p>Name: {{ user.username }}</p></a>
-      <p>Email: {{ user.email }}</p>
-      <p>Password: {{ user.password }}</p>
-      <p>Created At: {{ user.created_at }}</p>
+      <a href="{% url 'accounts:user-detail' profile.user.id %}"><p>Name: {{ profile.user.username }}</p></a>
+      <p>Email: {{ profile.user.email }}</p>
+      <p>Password: {{ profile.user.password }}</p>
+      <p>Created At: {{ profile.created_at }}</p>
     </div>
   {% endfor %}
 {% endblock %}
