--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -9,17 +9,9 @@
   <meta name="description" content="theAverageBlog">
   <meta name="author" content="NguyenTuanAnh">
   {% block head %}{% endblock %}
-  <a href="{% url 'accounts:user-register' %}">Register</a>s
-  <a href="{% url 'accounts:user-list' %}">User List</a>
-  <a href="{% url 'blogs:index' %}">Post List</a>
-  {% if user.is_authenticated %}
-    <a href="{% url 'blogs:post-create' %}">Write a Post</a>
-    <a href="{% url 'accounts:logout' %}">Logout</a>
-  {% else %}
-    <a href="{% url 'accounts:login' %}">Login</a>
-  {% endif %}
+  <a href="{% url 'account:signup' %}">Sign Up</a>
+  <a href="{% url 'account:index' %}">User List</a>
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'blogapp/style.css' %}">
 </head>
 
 <body>
