add frontend components: navbar, blog preview and index

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
     <title>The SO SO Blog with Django, ReactJS and Webpack</title>
   </head>
   <body>
