add category and some styles for titles

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Sen:wght@700&display=swap" rel="stylesheet"> 
     <title>The SO SO Blog with Django, ReactJS and Webpack</title>
   </head>
   <body>
