--- a/front_end_assets/styles/blogs/preview.scss
+++ b/front_end_assets/styles/blogs/preview.scss
@@ -3,4 +3,23 @@
 .blog-preview {
   margin-top: 10px;
   margin-bottom: 10px;
+
+  h3 {
+    font-family: 'Sen', sans-serif;
+    font-size: 36px;
+    line-height: 48px;
+    letter-spacing: -2px;
+    margin-bottom: 0;
+    margin-top: 0;
+    color: #232536;
+  }
+
+  .blog-preview-category {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 3px;
+    color: #592EA9;
+  }
 }
